--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,22 @@
 {% load static %}
 
 {% block content %}
-    <h1>Welcome to Dude Where's My Bike</h1>
-    <h2>Ireland's first GPS tracking bicycle web application
-        that implements machine learning of location data and much more!</h2>
+    <div class="card">
+        <div class="card-header">
+            {% if user.is_authenticated %}
+                <h2>welcome</h2>
+            {% endif %}
+        {%  if not user.is_authenticated %}
+            <h2>Login</h2>
+        {% endif %}
+        </div>
+        <div class="card-content">
+            <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Login</button>
+        </form>
+        </div>
+    </div>
+    <script src="{% static 'js/plan.js' %}"></script>
 {% endblock %}
